--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
     background-color: #46B1C9;
 }
+h1 {
+    font-family: "ff-dagny-web-pro", sans-serif;
+font-weight: 900;
+font-style: normal;
+}
 form {
     background-color: lightblue;
     padding: 20px;
@@ -13,10 +18,16 @@ label {
     border-radius: 10px;
     padding: 5px;
     transition: 0.5s;
+    font-family: "eixample-dip", sans-serif;
+font-weight: 400;
+font-style: normal;
 }
 label:hover {
     background-color: white;
 }
 .btn {
     background-color: black;
+    font-family: "eixample-dip", sans-serif;
+font-weight: 400;
+font-style: normal;
 }
