--- a/style.css
+++ b/style.css
@@ -10,24 +10,17 @@ h1 {
 font-weight: 900;
 font-style: normal;
 }
-form {
+.container {
     background-color: lightblue;
     padding: 20px;
     border-radius: 20px;
     border: 5px solid black;
+    margin-top: 20px;
 }
 label {
-    color: blue;
-    background-color: rgb(171, 180, 233);
-    border-radius: 10px;
-    padding: 5px;
-    transition: 0.5s;
     font-family: "eixample-dip", sans-serif;
 font-weight: 400;
 font-style: normal;
-}
-label:hover {
-    background-color: white;
 }
 .btn {
     background-color: black;
@@ -37,4 +30,12 @@ font-style: normal;
 }
 #result {
     background-color: whitesmoke;
+    font-family: "Nunito", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+.text-center.mb-4 {
+    background-color: rgb(255, 255, 255);
+    padding: 5px;
+    border-radius: 25px;
 }
