--- a/style.css
+++ b/style.css
@@ -30,12 +30,22 @@ font-style: normal;
 }
 #result {
     background-color: whitesmoke;
-    font-family: "Nunito", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+    
+  font-family: "rothwood", serif;
+font-weight: 700;
+font-style: normal;
+padding: 2px;
 }
 .text-center.mb-4 {
     background-color: rgb(255, 255, 255);
     padding: 5px;
     border-radius: 25px;
+}
+.intro {
+    font-family: "Nunito", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+option {
+    background-color: rgb(255, 237, 199);
 }
