--- a/style.css
+++ b/style.css
@@ -1,51 +1,51 @@
 body {
-    background-color: #46B1C9;
-    background-image: url("imgs/crkBackgroundwithcart.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+  background-color: #46b1c9;
+  background-image: url("imgs/crkBackgroundwithcart.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 h1 {
-    font-family: "ff-dagny-web-pro", sans-serif;
-font-weight: 900;
-font-style: normal;
+  font-family: "ff-dagny-web-pro", sans-serif;
+  font-weight: 900;
+  font-style: normal;
 }
 .container {
-    background-color: lightblue;
-    padding: 20px;
-    border-radius: 20px;
-    border: 5px solid black;
-    margin-top: 20px;
+  background-color: lightblue;
+  padding: 20px;
+  border-radius: 20px;
+  border: 5px solid black;
+  margin-top: 20px;
 }
 label {
-    font-family: "eixample-dip", sans-serif;
-font-weight: 400;
-font-style: normal;
+  font-family: "eixample-dip", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 .btn {
-    background-color: black;
-    font-family: "eixample-dip", sans-serif;
-font-weight: 400;
-font-style: normal;
+  background-color: black;
+  font-family: "eixample-dip", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 #result {
-    background-color: whitesmoke;
-    
+  background-color: whitesmoke;
+
   font-family: "rothwood", serif;
-font-weight: 700;
-font-style: normal;
-padding: 2px;
+  font-weight: 700;
+  font-style: normal;
+  padding: 2px;
 }
 .text-center.mb-4 {
-    background-color: rgb(255, 255, 255);
-    padding: 5px;
-    border-radius: 25px;
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 25px;
 }
 .intro {
-    font-family: "Nunito", serif;
+  font-family: "Nunito", serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
 option {
-    background-color: rgb(255, 237, 199);
+  background-color: rgb(255, 237, 199);
 }
